--- a/conf/translation/Surveys_nl.properties
+++ b/conf/translation/Surveys_nl.properties
@@ -1,3 +1,4 @@
 # GUIDELINES:
-# 1) Put here translations for 'surveys' (incl. 'profiles'): questions, group of questions, etc.
-# 2) Always use a qualified name for your keys, indicating the location where the translation is used, and the type of translation
+# 1) Put here translations for 'surveys' (incl. 'profiles'): questions, actions, and all related translations;
+# 2) Always use a qualified name for your keys, indicating the location where the translation is used, and the type of translation.
+
