Fixed encoding problem

--- a/conf/translation/Surveys_fr.properties
+++ b/conf/translation/Surveys_fr.properties
@@ -9,7 +9,7 @@ topic.light.label=Eclairage & électroménager
 topic.cook.label=Repas
 # CONSUMER PROFILE
 profile.Q1300.label=<u>Combien de personnes</u> sont dans le logement (votre situation typique en hiver le soir)?
-profile.Q1400.label=Nombre de jours par semaine (votre situation typique en hiver) où il n'y a personne à la maison avant 20h (resto, sortie, invitation, soirée …)
+profile.Q1400.label=Nombre de jours par semaine (votre situation typique en hiver) où il n'y a personne à la maison avant 20h (resto, sortie, invitation, soirée ...)
 profile.Q1400.option5.warning=Etes-vous sûr(e) qu'il n'y a quasiment jamais quelqu'un qui est présent avant 20h ?
 profile.Q1500.label=A quelle heure la première personne de votre ménage rentre-t-elle à la maison ? (votre situation typique en hiver)
 profile.Q1500.options.0.label=avant 17h
@@ -17,9 +17,9 @@ profile.Q1500.options.1.label=entre 17h et 18h
 profile.Q1500.options.2.label=entre 18h et 19h
 profile.Q1500.options.3.label=entre 19h et 20h
 profile.Q1500.options.4.label=après 20h
-profile.Q1110.label=Combien de fois en semaine le lave-vaisselle est-il lancé…
-profile.Q1120.label=Combien de fois en semaine le lave-linge est-il lancé…
-profile.Q1130.label=Combien de fois en semaine le sèche-linge est-il lancé…
+profile.Q1110.label=Combien de fois en semaine le lave-vaisselle est-il lancé...
+profile.Q1120.label=Combien de fois en semaine le lave-linge est-il lancé...
+profile.Q1130.label=Combien de fois en semaine le sèche-linge est-il lancé...
 profile.Q1600.label=Au cas où vous avez un chauffage électrique (donc pas à gaz/mazout ou autre), donnez la surface habitable chauffée par des radiateurs électriques en m² (valeur typique: 150 m²)
 profile.Q1210.label=Combien de chauffes-eau électriques avez-vous ?
 profile.Q1900.label=Au cas où vous avez une pompe à chaleur, donnez la puissance électrique en Watt (valeur typique 3000 W)
@@ -85,7 +85,7 @@ action.Q3710.label=Manger froid ou cuisiner après 20h
 action.Q3711.label=En cas de jours d'alerte qui se suivent, pendant combien de jours d'affilée vous engagez-vous à réaliser cette action ?
 action.Q3720.label=Ne pas utiliser les plaques de cuisson électriques entre 17h et 20h
 action.Q3730.label=Ne pas utiliser le four pour cuisiner entre 17h et 20h
-action.Q3740.label=Inviter ... ménages (amis, famille, voisins, …) à manger et leur demander de tout couper chez eux dès 17h
+action.Q3740.label=Inviter ... ménages (amis, famille, voisins, ...) à manger et leur demander de tout couper chez eux dès 17h
 action.Q3740.tooltip=Pensez surtout aux personnes qui cuisinent d'habitude sur des taques électriques ! ;-)
 action.Q3741.label=En cas de jours d'alerte qui se suivent, pendant combien de jours d'affilée vous engagez-vous à réaliser cette action ?
 action.Q3750.label=Ne pas utiliser votre micro-onde entre 17h et 20h
