Survey pages canvas

--- a/conf/translation/Surveys_fr.properties
+++ b/conf/translation/Surveys_fr.properties
@@ -113,3 +113,13 @@ profile.sensitizationkit.option.1.label=mes voisins
 profile.sensitizationkit.option.2.label=mes amis
 profile.info.summaryemail.label=Vous allez recevoir un e-mail récapitulatif, qui vous permettra de confirmer votre inscription
 profile.info.terms&conditions.label=Conditions générales et politique de confidentialité
+
+#WELCOME
+welcome.choose_message=Je m'incris en tant que
+generic.household=Ménage
+generic.valid=Valider
+generic.close=Fermer
+generic.yes=Oui
+generic.no=Non
+generic.previous=Précédent
+generic.next=Suivant
