--- a/conf/translation/Interfaces_fr.properties
+++ b/conf/translation/Interfaces_fr.properties
@@ -5,3 +5,5 @@ directive.welcome.title.label=Je suis la Welcome directive \!
 directive.boolean.yes=Oui
 directive.boolean.no=Non
 filter.toHour.hour.suffix=h
+filter.toSquareMeters.m2.suffix=m<sup>2</sup>
+filter.toWatts.w.suffix=W
