--- a/conf/translation/Interfaces_nl.properties
+++ b/conf/translation/Interfaces_nl.properties
@@ -5,3 +5,5 @@ directive.welcome.title.label=
 directive.boolean.yes=Ja
 directive.boolean.no=Neen
 filter.toHour.hour.suffix=u
+filter.toSquareMeters.m2.suffix=m<sup>2</sup>
+filter.toWatts.w.suffix=W
