--- a/conf/translation/Surveys_fr.properties
+++ b/conf/translation/Surveys_fr.properties
@@ -8,97 +8,95 @@ topic.heat.label=Chauffage & eau chaude
 topic.light.label=Eclairage & électroménager
 topic.cook.label=Repas
 # CONSUMER PROFILE
-profile.Q1300.label=<u>Combien de personnes</u> sont dans le logement (votre situation typique en hiver le soir)?
-profile.Q1400.label=Nombre de jours par semaine (votre situation typique en hiver) où il n'y a personne à la maison avant 20h (resto, sortie, invitation, soirée ...)
-profile.Q1400.option5.warning=Etes-vous sûr(e) qu'il n'y a quasiment jamais quelqu'un qui est présent avant 20h ?
-profile.Q1500.label=A quelle heure la première personne de votre ménage rentre-t-elle à la maison ? (votre situation typique en hiver)
-profile.Q1500.options.0.label=avant 17h
-profile.Q1500.options.1.label=entre 17h et 18h
-profile.Q1500.options.2.label=entre 18h et 19h
-profile.Q1500.options.3.label=entre 19h et 20h
-profile.Q1500.options.4.label=après 20h
-profile.Q1110.label=Combien de fois en semaine le lave-vaisselle est-il lancé...
-profile.Q1120.label=Combien de fois en semaine le lave-linge est-il lancé...
-profile.Q1130.label=Combien de fois en semaine le sèche-linge est-il lancé...
-profile.Q1600.label=Au cas où vous avez un chauffage électrique (donc pas à gaz/mazout ou autre), donnez la surface habitable chauffée par des radiateurs électriques en m² (valeur typique: 150 m²)
-profile.Q1210.label=Combien de chauffes-eau électriques avez-vous ?
-profile.Q1900.label=Au cas où vous avez une pompe à chaleur, donnez la puissance électrique en Watt (valeur typique 3000 W)
-profile.Q1900.low-value.warning=Etes vous sûr(e)? Cette valeur nous semble faible !
-profile.Q1160.label=Combien de fois le repassage est-il fait en semaine ?
-profile.Q1220.label=Combien de frigos avez-vous ?
-profile.Q1230.label=Combien de congélateurs avez-vous ? (considérez uniquement les congélateurs non-intégrés dans les frigos)
-profile.Q1700.label=Nombre de jours par semaine (votre situation typique en hiver) que la télévision est allumée le soir
-profile.Q1750.label=L'éclairage dans le logement est surtout avec
+Q1300.label=<u>Combien de personnes</u> sont dans le logement (votre situation typique en hiver le soir)?
+Q1400.label=Nombre de jours par semaine (votre situation typique en hiver) où il n'y a personne à la maison avant 20h (resto, sortie, invitation, soirée ...)
+Q1400.option5.warning=Etes-vous sûr(e) qu'il n'y a quasiment jamais quelqu'un qui est présent avant 20h ?
+Q1500.label=A quelle heure la première personne de votre ménage rentre-t-elle à la maison ? (votre situation typique en hiver)
+Q1500.options.0.label=avant 17h
+Q1500.options.1.label=entre 17h et 18h
+Q1500.options.2.label=entre 18h et 19h
+Q1500.options.3.label=entre 19h et 20h
+Q1500.options.4.label=après 20h
+Q1110.label=Combien de fois en semaine le lave-vaisselle est-il lancé...
+Q1120.label=Combien de fois en semaine le lave-linge est-il lancé...
+Q1130.label=Combien de fois en semaine le sèche-linge est-il lancé...
+Q1600.label=Au cas où vous avez un chauffage électrique (donc pas à gaz/mazout ou autre), donnez la surface habitable chauffée par des radiateurs électriques en m² (valeur typique: 150 m²)
+Q1210.label=Combien de chauffes-eau électriques avez-vous ?
+Q1900.label=Au cas où vous avez une pompe à chaleur, donnez la puissance électrique en Watt (valeur typique 3000 W)
+Q1900.low-value.warning=Etes vous sûr(e)? Cette valeur nous semble faible !
+Q1160.label=Combien de fois le repassage est-il fait en semaine ?
+Q1220.label=Combien de frigos avez-vous ?
+Q1230.label=Combien de congélateurs avez-vous ? (considérez uniquement les congélateurs non-intégrés dans les frigos)
+Q1700.label=Nombre de jours par semaine (votre situation typique en hiver) que la télévision est allumée le soir
+Q1750.label=L'éclairage dans le logement est surtout avec
 
-profile.Q1800.label=Au cas où vous avez des spots extérieures qui sont allumés en continu dès le coucher de soleil, donnez la puissance estimée en Watt pour l'ensemble de ces spots (valeur typique: 100 W par spot)
-profile.Q1800.low-value.warning=Etes vous sûr(e)? Cette valeur nous semble faible !
-profile.Q2000.label=Les jours de semaine entre 17h et 20h, votre ménage utilise-t-il souvent d'autres appareils électroménagers avec consommation ponctuelle importante?
-profile.Q2010.label=Aspirateur
-profile.Q2010.options.0.label=quasiment jamais
-profile.Q2010.options.1.label=en moyenne 15 minutes par jour
-profile.Q2010.options.2.label=en moyenne 30 minutes par jour
-profile.Q2010.options.4.label=en moyenne 1 heure par jour ou plus
-profile.Q2020.label=Sèche-cheveux
-profile.Q2020.options.0.label=quasiment jamais
-profile.Q2020.options.1.label=en moyenne 15 minutes par jour
-profile.Q2020.options.2.label=en moyenne 30 minutes par jour
-profile.Q2020.options.4.label=en moyenne 1 heure par jour ou plus
-profile.Q2030.label=Micro-onde
-profile.Q2030.options.0.label=quasiment jamais
-profile.Q2030.options.1.label=en moyenne 15 minutes par jour
-profile.Q2030.options.2.label=en moyenne 30 minutes par jour
-profile.Q2030.options.4.label=en moyenne 1 heure par jour ou plus
-profile.Q2040.label=Bouilloire
-profile.Q2040.options.0.label=quasiment jamais
-profile.Q2040.options.1.label=1 à 5 fois par jour
-profile.Q2040.options.2.label=5 à 10 fois par jour
-profile.Q2040.options.4.label=plus de 10 fois par jour
-profile.Q1235.label=Combien de voitures électriques dont vous chargez les batteries entre 17h et 20h avez-vous ?
-profile.Q1140.label=Combien de fois cuisinez-vous en semaine sur des plaques de cuisson électriques (si vous en avez) ?
-profile.Q1150.label=Combien de fois cuisinez-vous en semaine avec un four électrique (si vous en avez) ?
+Q1800.label=Au cas où vous avez des spots extérieures qui sont allumés en continu dès le coucher de soleil, donnez la puissance estimée en Watt pour l'ensemble de ces spots (valeur typique: 100 W par spot)
+Q1800.low-value.warning=Etes vous sûr(e)? Cette valeur nous semble faible !
+Q2000.label=Les jours de semaine entre 17h et 20h, votre ménage utilise-t-il souvent d'autres appareils électroménagers avec consommation ponctuelle importante?
+Q2010.label=Aspirateur
+Q2010.options.0.label=quasiment jamais
+Q2010.options.1.label=en moyenne 15 minutes par jour
+Q2010.options.2.label=en moyenne 30 minutes par jour
+Q2010.options.4.label=en moyenne 1 heure par jour ou plus
+Q2020.label=Sèche-cheveux
+Q2020.options.0.label=quasiment jamais
+Q2020.options.1.label=en moyenne 15 minutes par jour
+Q2020.options.2.label=en moyenne 30 minutes par jour
+Q2020.options.4.label=en moyenne 1 heure par jour ou plus
+Q2030.label=Micro-onde
+Q2030.options.0.label=quasiment jamais
+Q2030.options.1.label=en moyenne 15 minutes par jour
+Q2030.options.2.label=en moyenne 30 minutes par jour
+Q2030.options.4.label=en moyenne 1 heure par jour ou plus
+Q2040.label=Bouilloire
+Q2040.options.0.label=quasiment jamais
+Q2040.options.1.label=1 à 5 fois par jour
+Q2040.options.2.label=5 à 10 fois par jour
+Q2040.options.4.label=plus de 10 fois par jour
+Q1235.label=Combien de voitures électriques dont vous chargez les batteries entre 17h et 20h avez-vous ?
+Q1140.label=Combien de fois cuisinez-vous en semaine sur des plaques de cuisson électriques (si vous en avez) ?
+Q1150.label=Combien de fois cuisinez-vous en semaine avec un four électrique (si vous en avez) ?
 # POTENTIAL REDUCTION (based on profile)
 profile.potential-average-power-reduction.label=Mon potentiel en W
 profile.potential-consumption-reduction.label=Mon Potentiel en kWh par jour sur la période 17h-20h
 # ACTIONS
-action.Q3210.label=Eteindre ou débrancher tous les appareils fonctionnant à l'électricité (y compris l'éclairage, le chauffage électrique, les chauffes-eau électriques, les congélateurs, la pompe à chaleur, ...) et quitter la maison entre 17h et 20h
-action.Q3211.label=En cas de jours d'alerte qui se suivent, pendant combien de jours d'affilée vous engagez-vous à réaliser cette action ?
-action.Q3211.tooltip=<b>Le saviez-vous ?</b><br> Il est probable que les jours d'alerte se suivent en cas de froid !
-action.Q3110.label=Programmer les démarrages de votre lave-vaisselle à 3h du matin (si pas de programmation possible, le lancer quand vous allez vous coucher)
-action.Q3120.label=Programmer les démarrages de votre lave-linge à 3h du matin (si pas de programmation possible, le lancer quand vous allez vous coucher)
-action.Q3130.label=Programmer les démarrages de votre sèche-linge à 3h du matin (si pas de programmation possible, le lancer quand vous allez vous coucher)
-action.Q3310.label=Eteindre entre 17h et 20h vos radiateurs électriques
-action.Q3320.label=Eteindre votre pompe à chaleur entre 17h et 20h
-action.Q3330.label=Eteindre le(s) chauffe(s)-eau électrique(s) entre 17h et 20h
-action.Q3410.label=Débrancher le(s) frigo(s) entre 17h et 20h
-action.Q3420.label=Débrancher le(s) congélateur(s) entre 17h et 20h
-action.Q3420.tooltip=<b>Le saviez-vous ?</b><br> Un congélateur peut conserver les aliments en moyenne  pendant 24h après avoir été débranché.
-action.Q3510.label=Eteindre (quasiment) toutes les ampoules classiques et économiques entre 17h et 20h
-action.Q3510.tooltip=Penzez à acheter des bougies à l'avance ou mettez des ampoules LED
-action.Q3530.label=Eteindre vos spots extérieurs entre 17h et 20h
-action.Q3610.label=Ne pas utiliser votre aspirateur entre 17h et 20h
-action.Q3620.label=Ne pas utiliser votre sèche-cheveux entre 17h et 20h
-action.Q3630.label=Ne pas allumer la télévision entre 17h et 20h
-action.Q3631.label=En cas de jours d'alerte qui se suivent, pendant combien de jours d'affilée vous engagez-vous à réaliser cette action ?
-action.Q3640.label=Ne pas utiliser le fer à repasser entre 17h et 20h
-action.Q3810.label=Ne pas recharger la voiture électrique entre 17h et 20h
-action.Q3710.label=Manger froid ou cuisiner après 20h
-action.Q3711.label=En cas de jours d'alerte qui se suivent, pendant combien de jours d'affilée vous engagez-vous à réaliser cette action ?
-action.Q3720.label=Ne pas utiliser les plaques de cuisson électriques entre 17h et 20h
-action.Q3730.label=Ne pas utiliser le four pour cuisiner entre 17h et 20h
-action.Q3740.label=Inviter ... ménages (amis, famille, voisins, ...) à manger et leur demander de tout couper chez eux dès 17h
-action.Q3740.tooltip=Pensez surtout aux personnes qui cuisinent d'habitude sur des taques électriques ! ;-)
-action.Q3741.label=En cas de jours d'alerte qui se suivent, pendant combien de jours d'affilée vous engagez-vous à réaliser cette action ?
-action.Q3750.label=Ne pas utiliser votre micro-onde entre 17h et 20h
-action.Q3760.label=Ne pas utiliser votre bouilloire entre 17h et 20h
+Q3210.label=Eteindre ou débrancher tous les appareils fonctionnant à l'électricité (y compris l'éclairage, le chauffage électrique, les chauffes-eau électriques, les congélateurs, la pompe à chaleur, ...) et quitter la maison entre 17h et 20h
+Q3211.label=En cas de jours d'alerte qui se suivent, pendant combien de jours d'affilée vous engagez-vous à réaliser cette action ?
+Q3211.tooltip=<b>Le saviez-vous ?</b><br> Il est probable que les jours d'alerte se suivent en cas de froid !
+Q3110.label=Programmer les démarrages de votre lave-vaisselle à 3h du matin (si pas de programmation possible, le lancer quand vous allez vous coucher)
+Q3120.label=Programmer les démarrages de votre lave-linge à 3h du matin (si pas de programmation possible, le lancer quand vous allez vous coucher)
+Q3130.label=Programmer les démarrages de votre sèche-linge à 3h du matin (si pas de programmation possible, le lancer quand vous allez vous coucher)
+Q3310.label=Eteindre entre 17h et 20h vos radiateurs électriques
+Q3320.label=Eteindre votre pompe à chaleur entre 17h et 20h
+Q3330.label=Eteindre le(s) chauffe(s)-eau électrique(s) entre 17h et 20h
+Q3410.label=Débrancher le(s) frigo(s) entre 17h et 20h
+Q3420.label=Débrancher le(s) congélateur(s) entre 17h et 20h
+Q3420.tooltip=<b>Le saviez-vous ?</b><br> Un congélateur peut conserver les aliments en moyenne  pendant 24h après avoir été débranché.
+Q3510.label=Eteindre (quasiment) toutes les ampoules classiques et économiques entre 17h et 20h
+Q3510.tooltip=Penzez à acheter des bougies à l'avance ou mettez des ampoules LED
+Q3530.label=Eteindre vos spots extérieurs entre 17h et 20h
+Q3610.label=Ne pas utiliser votre aspirateur entre 17h et 20h
+Q3620.label=Ne pas utiliser votre sèche-cheveux entre 17h et 20h
+Q3630.label=Ne pas allumer la télévision entre 17h et 20h
+Q3631.label=En cas de jours d'alerte qui se suivent, pendant combien de jours d'affilée vous engagez-vous à réaliser cette action ?
+Q3640.label=Ne pas utiliser le fer à repasser entre 17h et 20h
+Q3810.label=Ne pas recharger la voiture électrique entre 17h et 20h
+Q3710.label=Manger froid ou cuisiner après 20h
+Q3711.label=En cas de jours d'alerte qui se suivent, pendant combien de jours d'affilée vous engagez-vous à réaliser cette action ?
+Q3720.label=Ne pas utiliser les plaques de cuisson électriques entre 17h et 20h
+Q3730.label=Ne pas utiliser le four pour cuisiner entre 17h et 20h
+Q3740.label=Inviter ... ménages (amis, famille, voisins, ...) à manger et leur demander de tout couper chez eux dès 17h
+Q3740.tooltip=Pensez surtout aux personnes qui cuisinent d'habitude sur des taques électriques ! ;-)
+Q3741.label=En cas de jours d'alerte qui se suivent, pendant combien de jours d'affilée vous engagez-vous à réaliser cette action ?
+Q3750.label=Ne pas utiliser votre micro-onde entre 17h et 20h
+Q3760.label=Ne pas utiliser votre bouilloire entre 17h et 20h
+
 # EFFECTIVE REDUCTION (based on actions)
 action.effective-average-power-reduction.label=Mes actions en W le premier jour d'alerte
 action.effective-consumption-reduction.label=Mes actions en kWh par jour sur la période 17h-20h (premier jour d'alerte)
+
 # ACCOUNT
-profile.email.label=Adresse e-mail
-profile.password.label=Mot de passe
-profile.lastname.label=Nom
-profile.firstname.label=Prénom
-profile.zipcode.label=Code postal
+profile.powerprovider.title=Informations d'inscription
 profile.powerprovider.label=Fournisseur d'électricité
 profile.powerconsumercategory.label=Votre consommation d'électricité annuelle
 profile.powerconsumercategory.option.0.label=Moins de 2500 kWh/an
@@ -123,3 +121,11 @@ generic.yes=Oui
 generic.no=Non
 generic.previous=Précédent
 generic.next=Suivant
+generic.firstName=Prénom
+generic.lastName=Nom
+generic.emailAddress=Addresse e-mail
+generic.password=Password
+generic.zip=Code postal
+
+# HOUSEHOLD.REGISTRATION
+household.modal.registration.title=Informations d'inscription
