add account to surveyDtoService

--- a/conf/translation/Surveys_fr.properties
+++ b/conf/translation/Surveys_fr.properties
@@ -111,6 +111,26 @@ profile.sensitizationkit.option.1.label=mes voisins
 profile.sensitizationkit.option.2.label=mes amis
 profile.info.summaryemail.label=Vous allez recevoir un e-mail récapitulatif, qui vous permettra de confirmer votre inscription
 profile.info.terms&conditions.label=Conditions générales et politique de confidentialité
+Q5210.options.0.label=Belpower
+Q5210.options.1.label=EBEM
+Q5210.options.2.label=Ecopower
+Q5210.options.3.label=Electrabel
+Q5210.options.4.label=Elegant
+Q5210.options.5.label=Eneco
+Q5210.options.6.label=Energie2030
+Q5210.options.7.label=Energy People
+Q5210.options.8.label=eni
+Q5210.options.9.label=Essent
+Q5210.options.10.label=Lampiris
+Q5210.options.11.label=Luminus
+Q5210.options.12.label=Mega
+Q5210.options.13.label=Octa+
+Q5210.options.14.label=Poweo
+Q5210.options.15.label=Tarif Social
+Q5210.options.16.label=Trevion
+Q5210.options.17.label=Wase Wind
+Q5210.options.18.label=Watz
+Q5210.options.19.label=Je ne sais pas
 
 #WELCOME
 welcome.choose_message=Je m'incris en tant que
