--- a/conf/translation/Surveys_fr.properties
+++ b/conf/translation/Surveys_fr.properties
@@ -149,3 +149,6 @@ generic.zip=Code postal
 
 # HOUSEHOLD.REGISTRATION
 household.modal.registration.title=Informations d'inscription
+
+# LOGIN MODAL
+login.modal.title=Login
