profil de consommation - form

--- a/conf/translation/Surveys_fr.properties
+++ b/conf/translation/Surveys_fr.properties
@@ -30,6 +30,11 @@ Q1230.label=Combien de congélateurs avez-vous ? (considérez uniquement les con
 Q1700.label=Nombre de jours par semaine (votre situation typique en hiver) que la télévision est allumée le soir
 Q1750.label=L'éclairage dans le logement est surtout avec
 
+Q1750.options.1.label=des lampes LED
+Q1750.options.2.label=des lampes fluo-compactes
+Q1750.options.3.label=des lampes halogènes
+Q1750.options.4.label=des ampoules classiques
+
 Q1800.label=Au cas où vous avez des spots extérieures qui sont allumés en continu dès le coucher de soleil, donnez la puissance estimée en Watt pour l'ensemble de ces spots (valeur typique: 100 W par spot)
 Q1800.low-value.warning=Etes vous sûr(e)? Cette valeur nous semble faible !
 Q2000.label=Les jours de semaine entre 17h et 20h, votre ménage utilise-t-il souvent d'autres appareils électroménagers avec consommation ponctuelle importante?
