--- a/conf/translation/Surveys_fr.properties
+++ b/conf/translation/Surveys_fr.properties
@@ -138,8 +138,10 @@ Q5210.options.18.label=Watz
 Q5210.options.19.label=Je ne sais pas
 
 #WELCOME
+welcome.title=Bienvenue sur Citizen's Reserve !
 welcome.choose_message=Je m'incris en tant que
 generic.household=Ménage
+generic.enterprise=Entreprise
 generic.valid=Valider
 generic.close=Fermer
 generic.yes=Oui
