Implementing actions forms

--- a/conf/translation/Interfaces_fr.properties
+++ b/conf/translation/Interfaces_fr.properties
@@ -7,3 +7,6 @@ directive.boolean.no=Non
 filter.toHour.hour.suffix=h
 filter.toSquareMeters.m2.suffix=m<sup>2</sup>
 filter.toWatts.w.suffix=W
+nav.to-actions=Passer aux actions
+nav.back-to-profile=Revenir au profil
+nav.to-identification=Terminer
