--- a/conf/translation/Surveys_fr.properties
+++ b/conf/translation/Surveys_fr.properties
@@ -1,6 +1,10 @@
 # GUIDELINES:
 # 1) Put here translations for 'surveys' (incl. 'profile and account informations'): questions, actions, and all related translations;
 # 2) Always use a qualified name for your keys, indicating the location where the translation is used, and the type of translation.
+# PERIOD
+period.1.label=entre 17h et 18h
+period.2.label=entre 18h et 19h
+period.3.label=entre 19h et 20h
 # TOPICS
 topic.programs.label=Programmes Gros Electroménager
 topic.presence.label=Présence au domicile
