--- a/conf/translation/Surveys_fr.properties
+++ b/conf/translation/Surveys_fr.properties
@@ -8,9 +8,9 @@ period.3.label=entre 19h et 20h
 # TOPICS
 topic.programs.label=Programmes Gros Electroménager
 topic.presence.label=Présence au domicile
-topic.heat.label=Chauffage & eau chaude
-topic.light.label=Eclairage & électroménager
-topic.cook.label=Repas
+topic.heating.label=Chauffage & eau chaude
+topic.lighting.label=Eclairage & électroménager
+topic.dinner.label=Repas
 # CONSUMER PROFILE
 Q1300.label=<u>Combien de personnes</u> sont dans le logement (votre situation typique en hiver le soir)?
 Q1400.label=Nombre de jours par semaine (votre situation typique en hiver) où il n'y a personne à la maison avant 20h (resto, sortie, invitation, soirée ...)
