--- a/conf/translation/Interfaces_fr.properties
+++ b/conf/translation/Interfaces_fr.properties
@@ -23,3 +23,21 @@ welcome.choose_message=Je m'incris en tant que
 welcome.forgot_password=Mot de passe oublié ?
 welcome.forgot_password.desc=Entrez votre adresse e-mail et un nouveau mot de passe vous sera envoyé.
 welcome.button.forgotPassword=Envoyer le nouveau mot de passe
+
+
+#GENERIC
+generic.save=Save
+generic.household=Ménage
+generic.enterprise=Entreprise
+generic.valid=Valider
+generic.close=Fermer
+generic.yes=Oui
+generic.no=Non
+generic.previous=Précédent
+generic.next=Suivant
+generic.firstName=Prénom
+generic.lastName=Nom
+generic.emailAddress=Addresse e-mail
+generic.password=Password
+generic.zip=Code postal
+
