--- a/conf/translation/Surveys_fr.properties
+++ b/conf/translation/Surveys_fr.properties
@@ -153,3 +153,5 @@ account.errorMessage.terms=Vous devez accepter les termes et conditions pour vou
 account.info.term.button.consult=Consulter les termes et conditions
 account.terms.modal.title=Termes et conditions
 account.button.changePassword=Changer de mot de passe
+account.button.changeEmail=Changer d'adresse e-mail
+account.info.newEmail=Votre nouvelle adresse e-mail
