--- a/conf/translation/Interfaces_nl.properties
+++ b/conf/translation/Interfaces_nl.properties
@@ -1,7 +1,7 @@
 # GUIDELINES:
 # 1) Put here translations related to interfaces: field labels, buttons, etc.
 # 2) Always use a qualified name for your keys, indicating the location where the translation is used, and the type of translation (label, button, etc.)
-directive.welcome.title.label=
+welcome.title=Ik ben de Welcome directive \!
 directive.boolean.yes=Ja
 directive.boolean.no=Neen
 filter.toHour.hour.suffix=u
