server message translate

--- a/conf/translation/Interfaces_fr.properties
+++ b/conf/translation/Interfaces_fr.properties
@@ -42,4 +42,12 @@ generic.emailAddress=Addresse e-mail
 generic.password=Password
 generic.zip=Code postal
 
+#OTHER
+logout.success=Vous êtes déconnecté
+account.changeEmail.success=Votre adresse e-mail a bien été modifiée
+account.changePassword.success=Votre mot de passe a bien été modifié
+account.save.success=Vos données ont bien été sauvegardées
+account.forgotPassword.success=Un email avec votre nouveau mot de passe a été envoyé à votre adresse e-mail
+account.login.success=Vous êtes connecté
+
 
