--- a/conf/translation/Messages_fr.properties
+++ b/conf/translation/Messages_fr.properties
@@ -1,3 +1,12 @@
 # GUIDELINES:
 # 1) Put here translations related to messages: error messages, validation messages, etc.
 # 2) Always use a qualified name for your keys, indicating the location where the translation is used, and the type of translation
+email_already_used=Cette adresse e-mail est déjà utilisée par un autre utilisateur. Veuillez en choisir une autre.
+conversion_dto_error=Une erreur fatale est intervenue (échec de la lecture du DTO). Si l'erreur se répète, merci de contacter le service technique
+wrong_credentials=L'adresse e-mail et / ou le mot de passe est incorrecte.
+email_doesnt_exit=Cette adresse e-mail n'existe pas
+wrong_old_password=L'ancien mot de passe ne correspond pas
+too_many_attempt=Il y a eu trop de tentative de connection. Votre compte sera indisponible durant les 30 prochaines minutes. Si vous avez oublié votre mot de passe, vous pouvez en obtenir un nouveau via l'onglet Mot de passe oublié?
+email_empty_parameter=Un paramètre de l'email est manquant : {0}
+email_fatal_error=Un e-mail n'a pas pu être envoyé pour une raison inconnue
+not_connected=Vous n'êtes pas connecté
