--- a/conf/translation/Surveys_fr.properties
+++ b/conf/translation/Surveys_fr.properties
@@ -13,6 +13,7 @@ topic.lighting.label=Eclairage & électroménager
 topic.dinner.label=Repas
 # CONSUMER PROFILE
 Q1300.label=<u>Combien de personnes</u> sont dans le logement (votre situation typique en hiver le soir)?
+Q1300.label.option20.warning=désolé la valeur maximale que vous pouvez mettre est 20
 Q1400.label=Nombre de jours par semaine (votre situation typique en hiver) où il n'y a personne à la maison avant 20h (resto, sortie, invitation, soirée ...)
 Q1400.option5.warning=Etes-vous sûr(e) qu'il n'y a quasiment jamais quelqu'un qui est présent avant 20h ?
 Q1500.label=A quelle heure la première personne de votre ménage rentre-t-elle à la maison ? (votre situation typique en hiver)
@@ -22,6 +23,7 @@ Q1500.options.2.label=entre 18h et 19h
 Q1500.options.3.label=entre 19h et 20h
 Q1500.options.4.label=après 20h
 Q1110.label=Combien de fois en semaine le lave-vaisselle est-il lancé...
+Q1110.label.toomany.warning=vous êtes sûr? Il nous semble que vous démarrer cette application excessivement souvent
 Q1120.label=Combien de fois en semaine le lave-linge est-il lancé...
 Q1130.label=Combien de fois en semaine le sèche-linge est-il lancé...
 Q1600.label=Au cas où vous avez un chauffage électrique (donc pas à gaz/mazout ou autre), donnez la surface habitable chauffée par des radiateurs électriques en m² (valeur typique: 150 m²)
