--- a/conf/translation/Messages_fr.properties
+++ b/conf/translation/Messages_fr.properties
@@ -10,3 +10,4 @@ too_many_attempt=Il y a eu trop de tentative de connection. Votre compte sera in
 email_empty_parameter=Un paramètre de l'email est manquant : {0}
 email_fatal_error=Un e-mail n'a pas pu être envoyé pour une raison inconnue
 not_connected=Vous n'êtes pas connecté
+wrong_right=Vous n'avez pas les droits requis
