--- a/conf/translation/Surveys_fr.properties
+++ b/conf/translation/Surveys_fr.properties
@@ -12,9 +12,9 @@ topic.heating.label=Chauffage & eau chaude
 topic.lighting.label=Eclairage & électroménager
 topic.dinner.label=Repas
 # CONSUMER PROFILE
-Q1300.label=<u>Combien de personnes</u> sont dans le logement (votre situation typique en hiver le soir)?
+Q1300.label=<u>Combien de personnes</u> occupent votre logement (votre situation typique en hiver le soir)?
 Q1300.label.option20.warning=désolé la valeur maximale que vous pouvez mettre est 20
-Q1400.label=Nombre de jours par semaine (votre situation typique en hiver) où il n'y a personne à la maison avant 20h (resto, sortie, invitation, soirée ...)
+Q1400.label=Nombre de jours du lundi au vendredi où il n'y a <u>personne à la maison</u> avant 20h (resto, sortie, invitation, soirée ...)
 Q1400.option5.warning=Etes-vous sûr(e) qu'il n'y a quasiment jamais quelqu'un qui est présent avant 20h ?
 Q1500.label=A quelle heure la première personne de votre ménage rentre-t-elle à la maison ? (votre situation typique en hiver)
 Q1500.options.0.label=avant 17h
@@ -22,51 +22,51 @@ Q1500.options.1.label=entre 17h et 18h
 Q1500.options.2.label=entre 18h et 19h
 Q1500.options.3.label=entre 19h et 20h
 Q1500.options.4.label=après 20h
-Q1110.label=Combien de fois en semaine le lave-vaisselle est-il lancé...
+Q1110.label=Combien de fois en semaine (du lundi au vendredi) le <u>lave-vaisselle</u> est-il lancé...
 Q1110.label.toomany.warning=vous êtes sûr? Il nous semble que vous démarrer cette application excessivement souvent
-Q1120.label=Combien de fois en semaine le lave-linge est-il lancé...
-Q1130.label=Combien de fois en semaine le sèche-linge est-il lancé...
-Q1600.label=Au cas où vous avez un chauffage électrique (donc pas à gaz/mazout ou autre), donnez la surface habitable chauffée par des radiateurs électriques en m² (valeur typique: 150 m²)
+Q1120.label=Combien de fois en semaine (du lundi au vendredi) le <u>lave-linge</u> est-il lancé...
+Q1130.label=Combien de fois en semaine (du lundi au vendredi) le <u>sèche-linge</u> est-il lancé...
+Q1600.label=Quelle est la surface chauffée entre 17 et 20h par des radiateurs électriques ? (0 si vous n'en avez pas)
 Q1210.label=Combien de chauffes-eau électriques avez-vous ?
-Q1900.label=Au cas où vous avez une pompe à chaleur, donnez la puissance électrique en Watt (valeur typique 3000 W)
+Q1900.label=Quelle est la puissance de votre pompe à chaleur en W ? (0 si vous n'en avez pas)
 Q1900.low-value.warning=Etes vous sûr(e)? Cette valeur nous semble faible !
-Q1160.label=Combien de fois le repassage est-il fait en semaine ?
+Q1160.label=Combien de fois repassez vous du lundi au vendredi ?
 Q1220.label=Combien de frigos avez-vous ?
 Q1230.label=Combien de congélateurs avez-vous ? (considérez uniquement les congélateurs non-intégrés dans les frigos)
-Q1700.label=Nombre de jours par semaine (votre situation typique en hiver) que la télévision est allumée le soir
-Q1750.label=L'éclairage dans le logement est surtout avec
+Q1700.label=Nombre de jours par semaine (du lundi au vendredi) où la télévision est allumée entre 17 et 20h ?
+Q1750.label=Pour votre éclairage, vous utilisez...
 
-Q1750.options.1.label=des lampes LED
-Q1750.options.2.label=des lampes fluo-compactes
-Q1750.options.3.label=des lampes halogènes
-Q1750.options.4.label=des ampoules classiques
+Q1750.options.1.label=principalement des ampoules économiques
+Q1750.options.2.label=des ampoules économiques et halogènes
+Q1750.options.3.label=principalement des ampoules classiques
+Q1750.options.4.label=des ampoules classiques et halogènes
 
-Q1800.label=Au cas où vous avez des spots extérieures qui sont allumés en continu dès le coucher de soleil, donnez la puissance estimée en Watt pour l'ensemble de ces spots (valeur typique: 100 W par spot)
+Q1800.label=Au cas où vous avez des <u>spots extérieurs</u> qui sont allumés en continu dès le coucher de soleil, donnez la puissance estimée en Watt pour l'ensemble de ces spots
 Q1800.low-value.warning=Etes vous sûr(e)? Cette valeur nous semble faible !
-Q2000.label=Les jours de semaine entre 17h et 20h, votre ménage utilise-t-il souvent d'autres appareils électroménagers avec consommation ponctuelle importante?
+Q2000.label=Pour chacun des appareils merci d'indiquer votre habitude d'utilisation en semaine (du lundi au vendredi)
 Q2010.label=Aspirateur
 Q2010.options.0.label=quasiment jamais
-Q2010.options.1.label=en moyenne 15 minutes par jour
-Q2010.options.2.label=en moyenne 30 minutes par jour
-Q2010.options.4.label=en moyenne 1 heure par jour ou plus
+Q2010.options.1.label=moins de 15 minutes par jour
+Q2010.options.2.label=de 15 à 30 minutes par jour
+Q2010.options.4.label=plus de 30 minutes par jour ou plus
 Q2020.label=Sèche-cheveux
 Q2020.options.0.label=quasiment jamais
-Q2020.options.1.label=en moyenne 15 minutes par jour
-Q2020.options.2.label=en moyenne 30 minutes par jour
-Q2020.options.4.label=en moyenne 1 heure par jour ou plus
+Q2020.options.1.label=moins de 15 minutes par jour
+Q2020.options.2.label=de 15 à 30 minutes par jour
+Q2020.options.4.label=plus de 30 minutes par jour ou plus
 Q2030.label=Micro-onde
 Q2030.options.0.label=quasiment jamais
-Q2030.options.1.label=en moyenne 15 minutes par jour
-Q2030.options.2.label=en moyenne 30 minutes par jour
-Q2030.options.4.label=en moyenne 1 heure par jour ou plus
+Q2030.options.1.label=moins de 15 minutes par jour
+Q2030.options.2.label=de 15 à 30 minutes par jour
+Q2030.options.4.label=plus de 30 minutes par jour ou plus
 Q2040.label=Bouilloire
 Q2040.options.0.label=quasiment jamais
 Q2040.options.1.label=1 à 5 fois par jour
 Q2040.options.2.label=5 à 10 fois par jour
 Q2040.options.4.label=plus de 10 fois par jour
 Q1235.label=Combien de voitures électriques dont vous chargez les batteries entre 17h et 20h avez-vous ?
-Q1140.label=Combien de fois cuisinez-vous en semaine sur des plaques de cuisson électriques (si vous en avez) ?
-Q1150.label=Combien de fois cuisinez-vous en semaine avec un four électrique (si vous en avez) ?
+Q1140.label=Du lundi au vendredi, combien de fois cuisinez-vous sur des plaques de cuisson électriques (0 si vous n'en avez pas) ?
+Q1150.label=Du lundi au vendredi, combien de fois cuisinez-vous en semaine avec un four électrique (0 si vous n'en avez pas) ?
 # POTENTIAL REDUCTION (based on profile)
 profile.potential-average-power-reduction.label=Mon potentiel en W
 profile.potential-consumption-reduction.label=Mon Potentiel en kWh par jour sur la période 17h-20h
