--- a/conf/translation/Surveys_fr.properties
+++ b/conf/translation/Surveys_fr.properties
@@ -80,10 +80,10 @@ Q3130.label=Programmer les démarrages de votre sèche-linge à 3h du matin (si 
 Q3310.label=Eteindre entre 17h et 20h vos radiateurs électriques
 Q3320.label=Eteindre votre pompe à chaleur entre 17h et 20h
 Q3330.label=Eteindre le(s) chauffe(s)-eau électrique(s) entre 17h et 20h
-Q3410.label=Débrancher le(s) frigo(s) entre 17h et 20h
-Q3420.label=Débrancher le(s) congélateur(s) entre 17h et 20h
+Q3410.label=Débrancher ou programmer l'interruption du (des) frigo(s) entre 17h et 20h
+Q3420.label=Débrancher ou programmer l'interruption du (des) congélateur(s) entre 17h et 20h
 Q3420.tooltip=<b>Le saviez-vous ?</b><br> Un congélateur peut conserver les aliments en moyenne  pendant 24h après avoir été débranché.
-Q3510.label=Eteindre (quasiment) toutes les ampoules classiques et économiques entre 17h et 20h
+Q3510.label=Réduire l'éclairage d'au moins 50% entre 17h et 20h
 Q3510.tooltip=Penzez à acheter des bougies à l'avance ou mettez des ampoules LED
 Q3530.label=Eteindre vos spots extérieurs entre 17h et 20h
 Q3610.label=Ne pas utiliser votre aspirateur entre 17h et 20h
@@ -92,7 +92,7 @@ Q3630.label=Ne pas allumer la télévision entre 17h et 20h
 Q3631.label=En cas de jours d'alerte qui se suivent, pendant combien de jours d'affilée vous engagez-vous à réaliser cette action ?
 Q3640.label=Ne pas utiliser le fer à repasser entre 17h et 20h
 Q3810.label=Ne pas recharger la voiture électrique entre 17h et 20h
-Q3710.label=Manger froid ou cuisiner après 20h
+Q3710.label=Manger froid, cuisiner avant 17h ou cuisiner après 20h
 Q3711.label=En cas de jours d'alerte qui se suivent, pendant combien de jours d'affilée vous engagez-vous à réaliser cette action ?
 Q3720.label=Ne pas utiliser les plaques de cuisson électriques entre 17h et 20h
 Q3730.label=Ne pas utiliser le four pour cuisiner entre 17h et 20h
