optional question in account + batchresultcontroller

--- a/conf/translation/Messages_fr.properties
+++ b/conf/translation/Messages_fr.properties
@@ -11,3 +11,4 @@ email_empty_parameter=Un paramètre de l'email est manquant : {0}
 email_fatal_error=Un e-mail n'a pas pu être envoyé pour une raison inconnue
 not_connected=Vous n'êtes pas connecté
 wrong_right=Vous n'avez pas les droits requis
+data_not_found=La donnée demandée n'a pas été trouvée
