--- a/conf/translation/Interfaces_nl.properties
+++ b/conf/translation/Interfaces_nl.properties
@@ -1,9 +1,52 @@
 # GUIDELINES:
 # 1) Put here translations related to interfaces: field labels, buttons, etc.
 # 2) Always use a qualified name for your keys, indicating the location where the translation is used, and the type of translation (label, button, etc.)
-welcome.title=Ik ben de Welcome directive \!
-directive.boolean.yes=Ja
-directive.boolean.no=Neen
-filter.toHour.hour.suffix=u
-filter.toSquareMeters.m2.suffix=m<sup>2</sup>
-filter.toWatts.w.suffix=W
+
+directive.welcome.title.label=NL_Je suis la Welcome directive \!
+directive.boolean.yes=NL_Oui
+directive.boolean.no=NL_Non
+filter.toHour.hour.suffix=NL_h
+filter.toSquareMeters.m2.suffix=NL_m<sup>2</sup>
+filter.toWatts.w.suffix=NL_W
+nav.to-actions=NL_Passer aux actions
+nav.back-to-profile=NL_Revenir au profil
+nav.back-to-action=NL_Revenir aux actions
+nav.to-identification=NL_Terminer
+
+
+# HOUSEHOLD.REGISTRATION
+household.modal.registration.title=NL_Informations d'inscription
+
+# WELCOME
+welcome.button.login=NL_Connection
+welcome.login_message=NL_J'ai déjà un compte Citizen's Reserve
+welcome.title=NL_Bienvenue sur Citizen's Reserve !
+welcome.choose_message=NL_Je m'incris en tant que
+welcome.forgot_password=NL_Mot de passe oublié ?
+welcome.forgot_password.desc=NL_Entrez votre adresse e-mail et un nouveau mot de passe vous sera envoyé.
+welcome.button.forgotPassword=NL_Envoyer le nouveau mot de passe
+
+
+#GENERIC
+generic.save=NL_Save
+generic.household=NL_Ménage
+generic.enterprise=NL_Entreprise
+generic.valid=NL_Valider
+generic.close=NL_Fermer
+generic.yes=NL_Oui
+generic.no=NL_Non
+generic.previous=NL_Précédent
+generic.next=NL_Suivant
+generic.firstName=NL_Prénom
+generic.lastName=NL_Nom
+generic.emailAddress=NL_Addresse e-mail
+generic.password=NL_Password
+generic.zip=NL_Code postal
+
+#OTHER
+logout.success=NL_Vous êtes déconnecté
+account.changeEmail.success=NL_Votre adresse e-mail a bien été modifiée
+account.changePassword.success=NL_Votre mot de passe a bien été modifié
+account.save.success=NL_Vos données ont bien été sauvegardées
+account.forgotPassword.success=NL_Un email avec votre nouveau mot de passe a été envoyé à votre adresse e-mail
+account.login.success=NL_Vous êtes connecté
