--- a/conf/translation/Messages_nl.properties
+++ b/conf/translation/Messages_nl.properties
@@ -11,3 +11,4 @@ email_empty_parameter=NL_Un paramètre de l'email est manquant : {0}
 email_fatal_error=NL_Un e-mail n'a pas pu être envoyé pour une raison inconnue
 not_connected=NL_Vous n'êtes pas connecté
 wrong_right=NL_Vous n'avez pas les droits requis
+data_not_found=NL_La donnée demandée n'a pas été trouvée
