--- a/conf/translation/Surveys_nl.properties
+++ b/conf/translation/Surveys_nl.properties
@@ -16,9 +16,9 @@ topic.lighting.label=NL_Eclairage & électroménager
 topic.dinner.label=NL_Repas
 # CONSUMER PROFILE
 Q1300.label=NL_<u>Combien de personnes</u> occupent votre logement (votre situation typique en hiver le soir)?
-Q1300.label.option20.warning=désolé la valeur maximale que vous pouvez mettre est 20
+Q1300.label.option20.warning=NL_désolé la valeur maximale que vous pouvez mettre est 20
 Q1400.label=NL_Nombre de jours du lundi au vendredi où il n'y a <u>personne à la maison</u> avant 20h (resto, sortie, invitation, soirée ...)
-Q1400.option5.warning=Etes-vous sûr(e) qu'il n'y a quasiment jamais quelqu'un qui est présent avant 20h ?
+Q1400.option5.warning=NL_Etes-vous sûr(e) qu'il n'y a quasiment jamais quelqu'un qui est présent avant 20h ?
 Q1500.label=NL_A quelle heure la première personne de votre ménage rentre-t-elle à la maison ? (votre situation typique en hiver)
 Q1500.options.0.label=NL_avant 17h
 Q1500.options.1.label=NL_entre 17h et 18h
@@ -26,13 +26,13 @@ Q1500.options.2.label=NL_entre 18h et 19h
 Q1500.options.3.label=NL_entre 19h et 20h
 Q1500.options.4.label=NL_après 20h
 Q1110.label=NL_Combien de fois en semaine (du lundi au vendredi) le <u>lave-vaisselle</u> est-il lancé...
-Q1110.label.toomany.warning=vous êtes sûr? Il nous semble que vous démarrer cette application excessivement souvent
+Q1110.label.toomany.warning=NL_vous êtes sûr? Il nous semble que vous démarrer cette application excessivement souvent
 Q1120.label=NL_Combien de fois en semaine (du lundi au vendredi) le <u>lave-linge</u> est-il lancé...
 Q1130.label=NL_Combien de fois en semaine (du lundi au vendredi) le <u>sèche-linge</u> est-il lancé...
 Q1600.label=NL_Quelle est la surface chauffée entre 17 et 20h par des radiateurs électriques ? (0 si vous n'en avez pas)
 Q1210.label=NL_Combien de chauffes-eau électriques avez-vous ?
 Q1900.label=NL_Quelle est la puissance de votre pompe à chaleur en W ? (0 si vous n'en avez pas)
-Q1900.low-value.warning=Etes vous sûr(e)? Cette valeur nous semble faible !
+Q1900.low-value.warning=NL_Etes vous sûr(e)? Cette valeur nous semble faible !
 Q1160.label=NL_Combien de fois repassez vous du lundi au vendredi ?
 Q1220.label=NL_Combien de frigos avez-vous ?
 Q1230.label=NL_Combien de congélateurs avez-vous ? (considérez uniquement les congélateurs non-intégrés dans les frigos)
@@ -45,7 +45,7 @@ Q1750.options.3.label=NL_principalement des ampoules classiques
 Q1750.options.4.label=NL_des ampoules classiques et halogènes
 
 Q1800.label=NL_Au cas où vous avez des <u>spots extérieurs</u> qui sont allumés en continu dès le coucher de soleil, donnez la puissance estimée en Watt pour l'ensemble de ces spots
-Q1800.low-value.warning=Etes vous sûr(e)? Cette valeur nous semble faible !
+Q1800.low-value.warning=NL_Etes vous sûr(e)? Cette valeur nous semble faible !
 Q2000.label=NL_Pour chacun des appareils merci d'indiquer votre habitude d'utilisation en semaine (du lundi au vendredi)
 Q2010.label=NL_Aspirateur
 Q2010.options.0.label=NL_quasiment jamais
@@ -76,7 +76,7 @@ profile.potential-consumption-reduction.label=NL_Mon Potentiel en kWh par jour s
 # ACTIONS
 Q3210.label=NL_Eteindre ou débrancher tous les appareils fonctionnant à l'électricité (y compris l'éclairage, le chauffage électrique, les chauffes-eau électriques, les congélateurs, la pompe à chaleur, ...) et quitter la maison entre 17h et 20h
 Q3211.label=NL_En cas de jours d'alerte qui se suivent, pendant combien de jours d'affilée vous engagez-vous à réaliser cette action ?
-Q3211.tooltip=<b>Le saviez-vous ?</b><br> Il est probable que les jours d'alerte se suivent en cas de froid !
+Q3211.tooltip=NL_<b>Le saviez-vous ?</b><br> Il est probable que les jours d'alerte se suivent en cas de froid !
 Q3110.label=NL_Programmer les démarrages de votre lave-vaisselle à 3h du matin (si pas de programmation possible, le lancer quand vous allez vous coucher)
 Q3120.label=NL_Programmer les démarrages de votre lave-linge à 3h du matin (si pas de programmation possible, le lancer quand vous allez vous coucher)
 Q3130.label=NL_Programmer les démarrages de votre sèche-linge à 3h du matin (si pas de programmation possible, le lancer quand vous allez vous coucher)
@@ -85,9 +85,9 @@ Q3320.label=NL_Eteindre votre pompe à chaleur entre 17h et 20h
 Q3330.label=NL_Eteindre le(s) chauffe(s)-eau électrique(s) entre 17h et 20h
 Q3410.label=NL_Débrancher ou programmer l'interruption du (des) frigo(s) entre 17h et 20h
 Q3420.label=NL_Débrancher ou programmer l'interruption du (des) congélateur(s) entre 17h et 20h
-Q3420.tooltip=<b>Le saviez-vous ?</b><br> Un congélateur peut conserver les aliments en moyenne  pendant 24h après avoir été débranché.
+Q3420.tooltip=NL_<b>Le saviez-vous ?</b><br> Un congélateur peut conserver les aliments en moyenne  pendant 24h après avoir été débranché.
 Q3510.label=NL_Réduire l'éclairage d'au moins 50% entre 17h et 20h
-Q3510.tooltip=Penzez à acheter des bougies à l'avance ou mettez des ampoules LED
+Q3510.tooltip=NL_Penzez à acheter des bougies à l'avance ou mettez des ampoules LED
 Q3530.label=NL_Eteindre vos spots extérieurs entre 17h et 20h
 Q3610.label=NL_Ne pas utiliser votre aspirateur entre 17h et 20h
 Q3620.label=NL_Ne pas utiliser votre sèche-cheveux entre 17h et 20h
@@ -100,7 +100,7 @@ Q3711.label=NL_En cas de jours d'alerte qui se suivent, pendant combien de jours
 Q3720.label=NL_Ne pas utiliser les plaques de cuisson électriques entre 17h et 20h
 Q3730.label=NL_Ne pas utiliser le four pour cuisiner entre 17h et 20h
 Q3740.label=NL_Inviter ... ménages (amis, famille, voisins, ...) à manger et leur demander de tout couper chez eux dès 17h
-Q3740.tooltip=Pensez surtout aux personnes qui cuisinent d'habitude sur des taques électriques ! ;-)
+Q3740.tooltip=NL_Pensez surtout aux personnes qui cuisinent d'habitude sur des taques électriques ! ;-)
 Q3741.label=NL_En cas de jours d'alerte qui se suivent, pendant combien de jours d'affilée vous engagez-vous à réaliser cette action ?
 Q3750.label=NL_Ne pas utiliser votre micro-onde entre 17h et 20h
 Q3760.label=NL_Ne pas utiliser votre bouilloire entre 17h et 20h
@@ -110,9 +110,10 @@ action.effective-average-power-reduction.label=NL_Mes actions en W le premier jo
 action.effective-consumption-reduction.label=NL_Mes actions en kWh par jour sur la période 17h-20h (premier jour d'alerte)
 
 # ACCOUNT
-account.personaldata.title=Informations d'inscription
-account.powerprovider.label=NL_Fournisseur d'électricité
-account.powerconsumercategory.label=NL_Votre consommation d'électricité annuelle
+account.personaldata.title=NL_Informations d'inscription
+account.powerprovider.label=NL_Fournisseur d'électricité (optionnel)
+account.powerconsumercategory.label=NL_Votre consommation d'électricité annuelle (optionnel)
+account.zip.label=NL_Code postal (optionnel)
 powerconsumercategory.options.0.label=NL_Moins de 2500 kWh/an
 powerconsumercategory.options.1.label=NL_3501 à 4501 kWh/an
 powerconsumercategory.options.2.label=NL_4501 à 6000 kWh/an
@@ -125,9 +126,9 @@ sensitizationkit.options.1.label=NL_mes voisins
 sensitizationkit.options.2.label=NL_mes amis
 account.info.summaryemail.label=NL_Vous allez recevoir un e-mail récapitulatif, qui vous permettra de confirmer votre inscription
 account.info.terms&conditions.label=NL_Conditions générales et politique de confidentialité
-account.info.repeatPassword=Répétez le mot de passe
-account.info.oldPassword=Votre ancien mot de passe
-account.info.newPassword=Votre nouveau mot de passe
+account.info.repeatPassword=NL_Répétez le mot de passe
+account.info.oldPassword=NL_Votre ancien mot de passe
+account.info.newPassword=NL_Votre nouveau mot de passe
 Q5210.options.0.label=NL_Belpower
 Q5210.options.1.label=NL_EBEM
 Q5210.options.2.label=NL_Ecopower
