--- a/conf/translation/Interfaces_fr.properties
+++ b/conf/translation/Interfaces_fr.properties
@@ -9,7 +9,7 @@ filter.toSquareMeters.m2.suffix=m<sup>2</sup>
 filter.toWatts.w.suffix=W
 nav.to-actions=Passer aux actions
 nav.back-to-profile=Revenir au profil
-nav.back-to-action=Revenir aux actions
+nav.back-to-actions=Revenir aux actions
 nav.to-identification=Terminer
 
 
@@ -18,13 +18,12 @@ household.modal.registration.title=Informations d'inscription
 
 # WELCOME
 welcome.button.login=Connection
-welcome.login_message=J'ai déjà un compte Citizen's Reserve
+welcome.login_message=J'ai déjà un compte Citizens' Reserve
 welcome.title=Bienvenue sur Citizen's Reserve !
 welcome.choose_message=Je m'incris en tant que
 welcome.forgot_password=Mot de passe oublié ?
 welcome.forgot_password.desc=Entrez votre adresse e-mail et un nouveau mot de passe vous sera envoyé.
 welcome.button.forgotPassword=Envoyer le nouveau mot de passe
-
 
 #GENERIC
 generic.save=Save
@@ -50,4 +49,27 @@ account.save.success=Vos données ont bien été sauvegardées
 account.forgotPassword.success=Un email avec votre nouveau mot de passe a été envoyé à votre adresse e-mail
 account.login.success=Vous êtes connecté
 
-
+# NEW !!! 
+# WELCOME
+welcome.title2=1/4 Qui suis-je?
+welcome.intro=Je m'enregistre en tant que
+welcome.outro=Merci de votre soutien à Citizens' Reserve ! 
+# PROFILE
+profile.title=2/4 Mon profil de consommation
+profile.intro=Merci de renseigner vos usages electriques pour <b>LES JOURS DE SEMAINE (LUNDI - VENDREDI) UNIQUEMENT</b>
+profile.result=Votre puissance moyenne est de <large><b>{0} watts</b></large> entre 17 et 20 h du lundi au vendredi
+profile.outro=Quand votre profil est complet (les 5 rubriques), passez à l'étape suivante pour calculer votre capacité d'effacement
+#ACTIONS
+actions.title=3/4 Mon potentiel d'effacement
+actions.intro=Sur base de votre profil, nous avons sélectionné les meilleures actions pour réduire votre puissance, réparties dans les 5 boites ci-dessous.</br>Merci de faire vos choix ! 
+actions.result=Bravo, vos actions permettraient d'ajouter <large><b>{0} watts</b></large> dans la réserve d'effacement citoyenne ! 
+actions.outro=Pour les y enregistrer définitivement, merci de vous inscrire à l'étape suivante
+#REGISTER
+register.title=4/4 Je deviens réserviste énergétique
+register.intro=Pour valider votre participation à la Citizens' Reserve, merci de nous fournir les informations suivantes. Celles-ci sont nécessaires pour :<br><ul><li>Vous faire parvenir nos alertes lorsqu'il faudra mobiliser votre réserve d'effacement<li>Valider votre engagement à participer à l'action (pour ajuster nos prévisions)<li>Eviter les doubles comptages<li>Communiquer les profils d'effacement aux différents acteurs (Gestionnaire de réseau, fournisseurs) pour que les MW de la réserve d'effacement soit pris en compte comme instrument visant à éviter les délestages et réduire vos futures factures.<li>Aucune donnée personnelle ne sera transmise à quiconque sans votre approbation préalable. seules des données agrégées sont transmises aux acteurs du marché de l'électricité </ul>
+register.outro=Merci, vous aurez accès à un récaptiulatif ainsi qu'à votre profil d'effacement en validant votre participation, et vos données vous seront enbvoyées par courriel.
+#RESULTS
+results.title=FELICITATIONS !
+results.intro=Vous êtes officiellement notre <large><b>{0} ème</b></large> réserviste énergétique
+result.result=Vos actions ont ajouté <large><b>{0} watts</b></large> dans la réserve d'effacement citoyenne qui s'élève désormais à <large><b>{1} MW</b></large>.</br>Voici votre profil d'effacement entre 17 et 20 h.
+result.outro=Nous vous remercions chaleureusement de votre participation et vous envoyons vos informations par email.</br>Vous pouvez à tout moment vous reconnecter sur Citizens' Reserve avec votre login et mot de passe.
