--- a/conf/translation/Interfaces_nl.properties
+++ b/conf/translation/Interfaces_nl.properties
@@ -10,7 +10,7 @@ filter.toSquareMeters.m2.suffix=NL_m<sup>2</sup>
 filter.toWatts.w.suffix=NL_W
 nav.to-actions=NL_Passer aux actions
 nav.back-to-profile=NL_Revenir au profil
-nav.back-to-action=NL_Revenir aux actions
+nav.back-to-actions=NL_Revenir aux actions
 nav.to-identification=NL_Terminer
 
 
@@ -19,7 +19,7 @@ household.modal.registration.title=NL_Informations d'inscription
 
 # WELCOME
 welcome.button.login=NL_Connection
-welcome.login_message=NL_J'ai déjà un compte Citizen's Reserve
+welcome.login_message=NL_J'ai déjà un compte Citizens' Reserve
 welcome.title=NL_Bienvenue sur Citizen's Reserve !
 welcome.choose_message=NL_Je m'incris en tant que
 welcome.forgot_password=NL_Mot de passe oublié ?
@@ -50,5 +50,30 @@ account.changePassword.success=NL_Votre mot de passe a bien été modifié
 account.save.success=NL_Vos données ont bien été sauvegardées
 account.forgotPassword.success=NL_Un email avec votre nouveau mot de passe a été envoyé à votre adresse e-mail
 account.login.success=NL_Vous êtes connecté
+
+# NEW !!! 
+# WELCOME
+welcome.title2=NL_1/4 Qui suis-je?
+welcome.intro=NL_Je m'enregistre en tant que
+welcome.outro=NL_Merci de votre soutien à Citizens' Reserve ! 
+# PROFILE
+profile.title=NL_2/4 Mon profil de consommation
+profile.intro=NL_Merci de renseigner vos usages electriques pour <b>LES JOURS DE SEMAINE (LUNDI - VENDREDI) UNIQUEMENT</b>
+profile.result=NL_Votre puissance moyenne est de <large><b>{0} watts</b></large> entre 17 et 20 h du lundi au vendredi
+profile.outro=NL_Quand votre profil est complet (les 5 rubriques), passez à l'étape suivante pour calculer votre capacité d'effacement
+#ACTIONS
+actions.title=NL_3/4 Mon potentiel d'effacement
+actions.intro=NL_Sur base de votre profil, nous avons sélectionné les meilleures actions pour réduire votre puissance, réparties dans les 5 boites ci-dessous.</br>Merci de faire vos choix ! 
+actions.result=NL_Bravo, vos actions permettraient d'ajouter <large><b>{0} watts</b></large> dans la réserve d'effacement citoyenne ! 
+actions.outro=NL_Pour les y enregistrer définitivement, merci de vous inscrire à l'étape suivante
+#REGISTER
+register.title=NL_4/4 Je deviens réserviste énergétique
+register.intro=NL_Pour valider votre participation à la Citizens' Reserve, merci de nous fournir les informations suivantes. Celles-ci sont nécessaires pour :<br><ul><li>Vous faire parvenir nos alertes lorsqu'il faudra mobiliser votre réserve d'effacement<li>Valider votre engagement à participer à l'action (pour ajuster nos prévisions)<li>Eviter les doubles comptages<li>Communiquer les profils d'effacement aux différents acteurs (Gestionnaire de réseau, fournisseurs) pour que les MW de la réserve d'effacement soit pris en compte comme instrument visant à éviter les délestages et réduire vos futures factures.<li>Aucune donnée personnelle ne sera transmise à quiconque sans votre approbation préalable. seules des données agrégées sont transmises aux acteurs du marché de l'électricité </ul>
+register.outro=NL_Merci, vous aurez accès à un récaptiulatif ainsi qu'à votre profil d'effacement en validant votre participation, et vos données vous seront enbvoyées par courriel.
+#RESULTS
+results.title=NL_FELICITATIONS !
+results.intro=NL_Vous êtes officiellement notre <large><b>{0} ème</b></large> réserviste énergétique
+result.result=NL_Vos actions ont ajouté <large><b>{0} watts</b></large> dans la réserve d'effacement citoyenne qui s'élève désormais à <large><b>{1} MW</b></large>.</br>Voici votre profil d'effacement entre 17 et 20 h.
+result.outro=NL_Nous vous remercions chaleureusement de votre participation et vous envoyons vos informations par email.</br>Vous pouvez à tout moment vous reconnecter sur Citizens' Reserve avec votre login et mot de passe.
 
 
