condition for repas

--- a/conf/translation/Surveys_fr.properties
+++ b/conf/translation/Surveys_fr.properties
@@ -94,13 +94,13 @@ Q3640.label=Ne pas utiliser le fer à repasser entre 17h et 20h
 Q3810.label=Ne pas recharger la voiture électrique entre 17h et 20h
 Q3710.label=Manger froid, cuisiner avant 17h ou cuisiner après 20h
 Q3711.label=En cas de jours d'alerte qui se suivent, pendant combien de jours d'affilée vous engagez-vous à réaliser cette action ?
-Q3720.label=Ne pas utiliser les plaques de cuisson électriques entre 17h et 20h
-Q3730.label=Ne pas utiliser le four pour cuisiner entre 17h et 20h
+Q3720.label=Les autres jours, ne pas utiliser les plaques de cuisson électriques entre 17h et 20h
+Q3730.label=Les autres jours, ne pas utiliser le four pour cuisiner entre 17h et 20h
 Q3740.label=Inviter ... ménages (amis, famille, voisins, ...) à manger et leur demander de tout couper chez eux dès 17h
 Q3740.tooltip=Pensez surtout aux personnes qui cuisinent d'habitude sur des taques électriques ! ;-)
 Q3741.label=En cas de jours d'alerte qui se suivent, pendant combien de jours d'affilée vous engagez-vous à réaliser cette action ?
-Q3750.label=Ne pas utiliser votre micro-onde entre 17h et 20h
-Q3760.label=Ne pas utiliser votre bouilloire entre 17h et 20h
+Q3750.label=Les autres jours, ne pas utiliser votre micro-onde entre 17h et 20h
+Q3760.label=Les autres jours, ne pas utiliser votre bouilloire entre 17h et 20h
 
 # EFFECTIVE REDUCTION (based on actions)
 action.effective-average-power-reduction.label=Mes actions en W le premier jour d'alerte
