--- a/conf/translation/Interfaces_fr.properties
+++ b/conf/translation/Interfaces_fr.properties
@@ -62,7 +62,7 @@ profile.outro=Quand votre profil est complet (les 5 rubriques), passez à l'éta
 #ACTIONS
 actions.title=3/4 Mon potentiel d'effacement
 actions.intro=Sur base de votre profil, nous avons sélectionné les meilleures actions pour réduire votre puissance, réparties dans les 5 boites ci-dessous.</br>Merci de faire vos choix ! 
-actions.result=Bravo, vos actions permettraient d'ajouter {{0}} watts dans la réserve d'effacement citoyenne !
+actions.result=Bravo, vos actions permettraient d'ajouter <large><b>{0} watts</b></large> dans la réserve d'effacement citoyenne !
 actions.outro=Pour les y enregistrer définitivement, merci de vous inscrire à l'étape suivante.
 #REGISTER
 register.title=4/4 Je deviens réserviste énergétique
