--- a/conf/translation/Interfaces_fr.properties
+++ b/conf/translation/Interfaces_fr.properties
@@ -56,12 +56,13 @@ welcome.intro=Je m'enregistre en tant que
 welcome.outro=Merci de votre soutien à Citizens' Reserve ! 
 # PROFILE
 profile.title=2/4 Mon profil de consommation
-profile.intro=Merci de renseigner vos usages electriques pour <b>LES JOURS DE SEMAINE (LUNDI - VENDREDI) UNIQUEMENT</b>
+profile.intro=Merci de renseigner vos usages électriques pour <b>LES JOURS DE SEMAINE (LUNDI - VENDREDI) UNIQUEMENT</b>
 profile.result=Votre puissance moyenne est de <large><b>{0} watts</b></large> entre 17 et 20 h du lundi au vendredi
-profile.outro=Quand votre profil est complet (les 5 rubriques), passez à l'étape suivante pour calculer votre capacité d'effacement
+profile.outro_1=Quand votre profil est complet (les 5 rubriques), passez à l'étape suivante pour calculer votre capacité d'effacement
+profile.outro_2=Calculons à l'étape suivante votre capacité d'effacement
 #ACTIONS
 actions.title=3/4 Mon potentiel d'effacement
-actions.intro=Sur base de votre profil, nous avons sélectionné les meilleures actions pour réduire votre puissance, réparties dans les 5 boites ci-dessous.</br>Merci de faire vos choix ! 
+actions.intro=Sur base de votre profil, nous avons sélectionné les meilleures actions pour réduire votre puissance, réparties dans les 5 boites ci-dessous.<br/>Merci de faire vos choix !
 actions.result=Bravo, vos actions permettraient d'ajouter <large><b>{0} watts</b></large> dans la réserve d'effacement citoyenne !
 actions.outro=Pour les y enregistrer définitivement, merci de vous inscrire à l'étape suivante.
 #REGISTER
