--- a/conf/translation/Interfaces_nl.properties
+++ b/conf/translation/Interfaces_nl.properties
@@ -58,9 +58,10 @@ welcome.intro=NL_Je m'enregistre en tant que
 welcome.outro=NL_Merci de votre soutien à Citizens' Reserve ! 
 # PROFILE
 profile.title=NL_2/4 Mon profil de consommation
-profile.intro=NL_Merci de renseigner vos usages electriques pour <b>LES JOURS DE SEMAINE (LUNDI - VENDREDI) UNIQUEMENT</b>
+profile.intro=NL_Merci de renseigner vos usages électriques pour <b>LES JOURS DE SEMAINE (LUNDI - VENDREDI) UNIQUEMENT</b>
 profile.result=NL_Votre puissance moyenne est de <large><b>{0} watts</b></large> entre 17 et 20 h du lundi au vendredi
-profile.outro=NL_Quand votre profil est complet (les 5 rubriques), passez à l'étape suivante pour calculer votre capacité d'effacement
+profile.outro_1=NL_Quand votre profil est complet (les 5 rubriques), passez à l'étape suivante pour calculer votre capacité d'effacement
+profile.outro_2=NL_Calculons à l'étape suivante votre capacité d'effacement
 #ACTIONS
 actions.title=NL_3/4 Mon potentiel d'effacement
 actions.intro=NL_Sur base de votre profil, nous avons sélectionné les meilleures actions pour réduire votre puissance, réparties dans les 5 boites ci-dessous.</br>Merci de faire vos choix ! 
