--- a/conf/translation/Interfaces_fr.properties
+++ b/conf/translation/Interfaces_fr.properties
@@ -42,6 +42,7 @@ generic.password=Password
 generic.zip=Code postal
 
 #OTHER
+logout=Déconnexion
 logout.success=Vous êtes déconnecté
 account.changeEmail.success=Votre adresse e-mail a bien été modifiée
 account.changePassword.success=Votre mot de passe a bien été modifié
