--- a/conf/translation/Email_nl.properties
+++ b/conf/translation/Email_nl.properties
@@ -1,8 +1,8 @@
-email.basic.footer_first=NL_N'hésitez à parler de l'initiative autour de vous et encourager vos amis, collègues et voisins à participer à l'aide des kits de sensibilisation et en partageant l'information sur les réseaux sociaux.
-email.basic.footer_second=NL_En vous remerciant,<br><br>L'équipe de Citizens' Reserve<br><br>
-email.forgotPassword.subject=NL_Récupération de votre mot de passe
+email.basic.footer_first=Aarzel niet om uw vrienden, collega's en buren ook te betrekken bij dit initiatief. U kan de informatie delen via sociale netwerken of een sensibiliseringskit aanvragen.
+email.basic.footer_second=We danken u,<br><br>Het team van Citizens' Reserve<br><br>
+email.forgotPassword.subject=Recupereer uw paswoord
 #0 = firstname, 1 = lastname, 2 = new password
-email.forgotPassword.content=NL_Bonjour {0} {1}<br><br>Suite à votre demande, voici votre nouveau mot de passe : {2}<br><br>Vous pouvez l'utiliser dés à présent pour vous connecter à Citiens' Reserve.
-email.registration.subject=NL_Confirmation de votre participation à Citizens' Reserve
+email.forgotPassword.content=Hallo {0} {1}<br><br>Gelet op uw aanvraag, hierbij uw nieuw paswoord: {2}<br><br>U kan dit paswoord vanaf nu gebruiken om u aan te melden op Citizens' Reserve.
+email.registration.subject=Bevestiging van uw deelname aan Citizens' Reserve
 #0 = firstname, 1 = lastname, 2 = result_reduction_sum, 3 = action table, 4 = space link
-email.registration.content=NL_Bonjour {0} {1},<br><br>Merci de votre participation à la Citizens' Reserve !.<br><br>Vous avez augmenté la réserve de {2} W. Bravo pour cet engagement citoyen !<br><br>Nous vous enverrons une alerte par e-mail quelques jours avant les jours de risque de délestage. En cas d'alerte, nous comptons sur vous pour faire de l'opération un succès et réaliser les actions que vous vous êtes engagez à effectuer :<br><br>{3}<br><br>Vous pouvez à tout moment modifier votre profil de consommation et vos engagements en vous connectant à votre <a href="{4}">espace</a>.
+email.registration.content=Hallo {0} {1},<br><br>Dank voor uw deelname aan Citizens' Reserve!.<br><br>U heeft onze afschakelreserve verhoogd met {2} W. Proficiat!<br><br>Wij zullen u enkele dagen op voorhand per email verwittigen over een aankomend risico op stroomonderbreking. Wij rekenen op de door u voorziene acties:<br><br>{3}<br><br>U kan op elk moment uw verbruikgsprofiel en voorziene acties wijzigen door u aan te melden op uw <a href="{4}">profiel</a>.
