--- a/conf/translation/Email_fr.properties
+++ b/conf/translation/Email_fr.properties
@@ -2,7 +2,7 @@ email.basic.footer_first=N'hésitez à parler de l'initiative autour de vous et 
 email.basic.footer_second=En vous remerciant,<br><br>L'équipe de Citizens' Reserve<br><br>
 email.forgotPassword.subject=Récupération de votre mot de passe
 #0 = firstname, 1 = lastname, 2 = new password
-email.forgotPassword.content=Bonjour {0} {1}<br><br>Suite à votre demande, voici votre nouveau mot de passe : {2}<br><br>Vous pouvez l'utiliser dés à présent pour vous connecter à Citiens' Reserve.
+email.forgotPassword.content=Bonjour {0} {1}<br><br>Suite à votre demande, voici votre nouveau mot de passe : {2}<br><br>Vous pouvez l'utiliser dés à présent pour vous connecter à Citizens' Reserve.
 email.registration.subject=Confirmation de votre participation à Citizens' Reserve
 #0 = firstname, 1 = lastname, 2 = result_reduction_sum, 3 = action table, 4 = space link
 email.registration.content=Bonjour {0} {1},<br><br>Merci de votre participation à la Citizens' Reserve !.<br><br>Vous avez augmenté la réserve de {2} W. Bravo pour cet engagement citoyen !<br><br>Nous vous enverrons une alerte par e-mail quelques jours avant les jours de risque de délestage. En cas d'alerte, nous comptons sur vous pour faire de l'opération un succès et réaliser les actions que vous vous êtes engagez à effectuer :<br><br>{3}<br><br>Vous pouvez à tout moment modifier votre profil de consommation et vos engagements en vous connectant à votre <a href="{4}">espace</a>.
