translation + language in account

--- a/conf/translation/Interfaces_fr.properties
+++ b/conf/translation/Interfaces_fr.properties
@@ -8,6 +8,7 @@ filter.toHour.hour.suffix=h
 filter.toSquareMeters.m2.suffix=m<sup>2</sup>
 filter.toWatts.w.suffix=W
 nav.to-actions=Passer aux actions
+nav.back-to-welcome=Revenir à l'accueil
 nav.back-to-profile=Revenir au profil
 nav.back-to-actions=Revenir aux actions
 nav.to-identification=Terminer
