--- a/conf/translation/Messages_nl.properties
+++ b/conf/translation/Messages_nl.properties
@@ -1,14 +1,14 @@
 # GUIDELINES:
 # 1) Put here translations related to messages: error messages, validation messages, etc.
 # 2) Always use a qualified name for your keys, indicating the location where the translation is used, and the type of translation
-email_already_used=NL_Cette adresse e-mail est déjà utilisée par un autre utilisateur. Veuillez en choisir une autre.
-conversion_dto_error=NL_Une erreur fatale est intervenue (échec de la lecture du DTO). Si l'erreur se répète, merci de contacter le service technique
-wrong_credentials=NL_L'adresse e-mail et / ou le mot de passe est incorrecte.
-email_doesnt_exit=NL_Cette adresse e-mail n'existe pas
-wrong_old_password=NL_L'ancien mot de passe ne correspond pas
-too_many_attempt=NL_Il y a eu trop de tentative de connection. Votre compte sera indisponible durant les 30 prochaines minutes. Si vous avez oublié votre mot de passe, vous pouvez en obtenir un nouveau via l'onglet Mot de passe oublié?
-email_empty_parameter=NL_Un paramètre de l'email est manquant : {0}
-email_fatal_error=NL_Un e-mail n'a pas pu être envoyé pour une raison inconnue
-not_connected=NL_Vous n'êtes pas connecté
-wrong_right=NL_Vous n'avez pas les droits requis
-data_not_found=NL_La donnée demandée n'a pas été trouvée
+email_already_used=Dit e-mail adres is reeds in gebruik. Gelieve een ander adres te kiezen.
+conversion_dto_error=Er is een fatala fout opgetreden (foutmelding bij lezen DTO). Neem contact op met de technische dienst indien dit zich herhaalt.
+wrong_credentials=Het e-mail adres en/of het paswoord is/zijn niet juist.
+email_doesnt_exit=Dit e-mail adres bestaat niet
+wrong_old_password=Het oude paswoord klopt niet
+too_many_attempt=Er zijn teveel pogingen tot aanmelding. De volgende 30 minuten is uw account niet beschikbaar. Als u uw paswoord vergeten is, kan u een nieuw aanvragen in de rubriek Paswoord Vergeten?
+email_empty_parameter=Een parameter uit de e-mail ontbreekt: {0}
+email_fatal_error=Omwille van een onbekende reden kon een e-mail niet verstuurd worden.
+not_connected=U bent niet aangemeld
+wrong_right=U beschikt niet over de nodige rechten
+data_not_found=De gevraagde gegevens kunnen niet gevonden worden
