fixed error translations

--- a/conf/translation/Interfaces_nl.properties
+++ b/conf/translation/Interfaces_nl.properties
@@ -65,7 +65,7 @@ profile.outro_1=Als uw verbruiksprofiel volledig is ingevuld (de 5 rubrieken), g
 profile.outro_2=In de volgende stap berekenen we uw afschakelvermogen
 #ACTIONS
 actions.title=3/4 Mijn afschakelreserve
-actions.intro=Op basis van uw verbruiksprofiel hebben we de meest aangewezen acties opgelijst om uw vermogen te verminderen. Deze zijn opgenomen in de 5 rubrieken hieronder.</br>Maak uw keuzes! 
+actions.intro=Op basis van uw verbruiksprofiel hebben we de meest aangewezen acties opgelijst om uw vermogen te verminderen. Deze zijn opgenomen in de 5 rubrieken hieronder.<br/>Maak uw keuzes! 
 actions.result=Mooi, uw acties zouden toelaten om <large><b>{0} watt</b></large> toe te voegen aan onze afschakelreserve! 
 actions.outro=Om deze definitief vast te leggen, gelieve u aub in te schrijven in de volgende stap
 #REGISTER
@@ -75,6 +75,6 @@ register.outro=Dank, bij het bevestigen van uw deelname krijgt u een overzicht v
 #RESULTS
 results.title=Proficiat!
 results.intro=U bent nu officieel onze <large><b>{0} ste</b></large> energie-reservist
-result.result=Uw acties hebben <large><b>{0} watt</b></large> toegevoegd aan onze afschakelreserve en deze bedraagt nu <large><b>{1} MW</b></large>.</br>Hierbij uw afschakelprofiel tussen 17u et 20u.
-result.outro=Wij danken u hartelijk voor uw deelname en uw gegevens worden u verstuurd per e-mail.</br>Op elk moment kan u zich opnieuw aanmelden op Citizens' Reserve met uw login en paswoord.
+result.result=Uw acties hebben <large><b>{0} watt</b></large> toegevoegd aan onze afschakelreserve en deze bedraagt nu <large><b>{1} MW</b></large>.<br/>Hierbij uw afschakelprofiel tussen 17u et 20u.
+result.outro=Wij danken u hartelijk voor uw deelname en uw gegevens worden u verstuurd per e-mail.<br/>Op elk moment kan u zich opnieuw aanmelden op Citizens' Reserve met uw login en paswoord.
 
